...
    onOrderChange: (NoteOrderBy) -> Unit
) {

    Column(modifier = modifier) {
        Row(modifier = Modifier.fillMaxWidth()) {
            DefaultRadioButton(
                text = "Title",
                selected = noteOrderBy is NoteOrderBy.Title,
                onSelected = {
                    onOrderChange(NoteOrderBy.Title(noteOrderBy.orderType))
                })
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
...
                selected = noteOrderBy.orderType is OrderType.Ascending,
                onSelected = {
                    onOrderChange(noteOrderBy.copy(OrderType.Ascending))
                })
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = noteOrderBy.orderType is OrderType.Descending,
                onSelected = {
                    onOrderChange(noteOrderBy.copy(OrderType.Descending))
                })
        }
    }
...
